<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="190.0dip" android:layout_height="fill_parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/code" android:layout_width="190.0dip" android:layout_height="190.0dip" android:scaleType="centerCrop" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingExtra="4.0dip" />
    </LinearLayout>
    <ScrollView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="16.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/setting_tmdb_key" />
            <com.fongmi.android.tv.ui.custom.CustomEditText android:textSize="18.0sp" android:id="@id/text" android:paddingTop="2.0dip" android:paddingBottom="8.0dip" android:nextFocusDown="@id/api" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/setting_tmdb_key_hint" android:singleLine="true" android:inputType="text" android:imeOptions="actionDone" android:importantForAutofill="no" />
            <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="6.0dip" android:text="@string/setting_tmdb_api" />
            <com.fongmi.android.tv.ui.custom.CustomEditText android:textSize="18.0sp" android:id="@id/api" android:paddingTop="2.0dip" android:paddingBottom="8.0dip" android:nextFocusDown="@id/image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/setting_tmdb_api_hint" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionDone" android:importantForAutofill="no" />
            <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="6.0dip" android:text="@string/setting_tmdb_image" />
            <com.fongmi.android.tv.ui.custom.CustomEditText android:textSize="18.0sp" android:id="@id/image" android:paddingTop="2.0dip" android:paddingBottom="8.0dip" android:nextFocusDown="@id/positive" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/setting_tmdb_image_hint" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionDone" android:importantForAutofill="no" />
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@id/bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/selector_setting_text" android:gravity="center" android:id="@id/positive" android:background="@drawable/selector_tmdb_key_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dialog_positive" android:singleLine="true" android:layout_weight="1.0" android:layout_marginEnd="16.0dip" />
                <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/selector_setting_text" android:gravity="center" android:id="@id/negative" android:background="@drawable/selector_tmdb_key_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dialog_negative" android:singleLine="true" android:layout_weight="1.0" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>
</LinearLayout>