<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/customactivityoncrash_error_image" android:contentDescription="@null" />
    <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/crash_info" android:lineSpacingExtra="4.0dp" />
    <com.google.android.material.textview.MaterialTextView android:textColor="@color/white" android:id="@id/restart" android:background="@drawable/selector_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/crash_restart" />
    <com.google.android.material.textview.MaterialTextView android:textColor="@color/white" android:id="@id/details" android:background="@drawable/selector_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/crash_details" />
</androidx.appcompat.widget.LinearLayoutCompat>
