<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_vertical" android:orientation="vertical" android:paddingTop="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="12.0dip" android:paddingEnd="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/exo" android:background="@drawable/selector_engine_chip" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="41.0dip" android:text="@string/play_exo" android:paddingStart="56.0dip" android:paddingEnd="0.0dip" />
    <View android:background="@drawable/engine_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
    <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/mpv" android:background="@drawable/selector_engine_chip" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="41.0dip" android:text="@string/play_mpv" android:paddingStart="56.0dip" android:paddingEnd="0.0dip" />
    <View android:background="@drawable/engine_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
    <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/system" android:background="@drawable/selector_engine_chip" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="41.0dip" android:text="@string/play_system" android:paddingStart="56.0dip" android:paddingEnd="0.0dip" />
    <View android:background="@drawable/engine_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
    <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/other" android:background="@drawable/selector_engine_chip" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="41.0dip" android:text="@string/play_other" android:paddingStart="56.0dip" android:paddingEnd="0.0dip" />
</androidx.appcompat.widget.LinearLayoutCompat>