<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="24.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/code" android:layout_width="180.0dp" android:layout_height="180.0dp" android:scaleType="centerCrop" />
    <com.yimi.android.tv.ui.custom.CustomEditText android:textSize="18.0sp" android:gravity="start|top" android:id="@id/text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/player_mpv_conf" android:maxLines="5" android:minLines="5" android:inputType="textMultiLine|textNoSuggestions" android:imeOptions="actionDone" android:fontFamily="monospace" android:layout_marginStart="12.0dp" android:layout_toEndOf="@id/code" android:importantForAutofill="no" />
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@id/bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignBottom="@id/code" android:layout_alignStart="@id/text">
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/positive" android:background="@drawable/selector_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/dialog_positive" android:singleLine="true" android:layout_weight="1.0" android:layout_marginEnd="16.0dp" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/negative" android:background="@drawable/selector_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/dialog_negative" android:singleLine="true" android:layout_weight="1.0" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
