<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="24.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/code" android:layout_width="180.0dp" android:layout_height="180.0dp" android:scaleType="centerCrop" />
    <com.google.android.material.textview.MaterialTextView android:textSize="18.0sp" android:textColor="@color/white" android:ellipsize="end" android:id="@id/info" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:lineSpacingExtra="4.0dp" android:paddingStart="4.0dp" android:paddingEnd="4.0dp" android:layout_marginStart="12.0dp" android:layout_toEndOf="@id/code" />
    <com.google.android.material.textview.MaterialTextView android:id="@id/name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <com.yimi.android.tv.ui.custom.CustomEditText android:textSize="18.0sp" android:id="@id/text" android:nextFocusDown="@id/positive" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:hint="@string/dialog_config_hint" android:singleLine="true" android:layout_above="@id/bottom" android:inputType="text" android:imeOptions="actionDone" android:layout_alignStart="@id/info" android:importantForAutofill="no" />
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@id/bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignBottom="@id/code" android:layout_alignStart="@id/info">
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/selector_site_item_text" android:gravity="center" android:id="@id/choose" android:background="@drawable/selector_config_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/setting_choose" android:singleLine="true" android:layout_weight="1.0" android:layout_marginEnd="16.0dp" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/selector_site_item_text" android:gravity="center" android:id="@id/positive" android:background="@drawable/selector_config_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/dialog_positive" android:singleLine="true" android:layout_weight="1.0" android:layout_marginEnd="16.0dp" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/selector_site_item_text" android:gravity="center" android:id="@id/negative" android:background="@drawable/selector_config_button" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/dialog_negative" android:singleLine="true" android:layout_weight="1.0" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
